--- a/css/index.css
+++ b/css/index.css
@@ -60,9 +60,14 @@ footer h3{
 .col-md-6.column img{
     max-width:100%;
 }
-.page-header{
-    height: 5em;
+.page-header.container{
+    padding-top: 1em;
+    padding-bottom:1em; 
     background-image: url(../images/首页轮播/3.jpg)
+}
+.page-header.container .zhuti{
+    margin-left:5em;
+    color:#f35336;
 }
 .page-header h1{
     margin-left:5em;
